--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "test": "mocha"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "dotenv": "^4.0.0",
     "express": "^4.12.4",
     "heroku": "^0.2.0",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
     "uuid": "^2.0.3"
   },
   "keywords": [
