--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.12.4",
     "mongoose": "^4.7.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0"
   },
   "keywords": [
     "node",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "dotenv": "^4.0.0",
     "faker": "^3.1.0",
     "mocha": "^3.2.0"
   }
